--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@tauri-apps/api": "^1.4.0",
     "formik": "^2.4.2",
+    "formik-material": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
