--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = "1.29.1"
+tokio = { version = "1.29.1", features = ["full"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 thiserror = "1.0.43"
 
