--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
     "@tauri-apps/api": "^1.4.0",
+    "dayjs": "^1.11.9",
     "formik": "^2.4.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
