--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 tokio = { version = "1.29.1", features = ["full"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 thiserror = "1.0.43"
+lazy_static = "1.4.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
