--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/api": "^1.4.0",
     "dayjs": "^1.11.9",
     "formik": "^2.4.2",
+    "mui-color-input": "^1.1.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
